added restart options to promtail and loki

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     image: grafana/loki:2.7.3
     container_name: grafana.loki
     hostname: grafana.loki
+    restart: unless-stopped
     ports:
       - 3100:3100
     volumes:
@@ -41,6 +42,7 @@ services:
     image: grafana/promtail:2.7.3
     container_name: grafana.promtail
     hostname: grafana.promtail
+    restart: unless-stopped
     volumes:
       - ./config/:/etc/promtail/
       - ${TRAEFIK_VOLUME}:/logs/
