--- a/config/promtail-config.yml
+++ b/config/promtail-config.yml
@@ -14,5 +14,5 @@ scrape_configs:
   - targets:
       - loki
     labels:
-      job: varlogs
+      job: traefik_logs
       __path__: /logs/access.log
