--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     hostname: grafana
-    restart: unless-stopped
+    restart: always
+    dns:
+      - 192.168.2.100
     user: "1000"
     volumes:
       - grafana-data:/var/lib/grafana
@@ -18,6 +20,8 @@ services:
     image: grafana/loki:2.7.3
     container_name: grafana.loki
     hostname: grafana.loki
+    dns:
+      - 192.168.2.100
     restart: unless-stopped
     ports:
       - 3100:3100
@@ -34,6 +38,8 @@ services:
     container_name: grafana.promtail
     hostname: grafana.promtail
     restart: unless-stopped
+    dns:
+      - 192.168.2.100
     volumes:
       - ./config/:/etc/promtail/
       - ${TRAEFIK_VOLUME}:/logs/
@@ -47,6 +53,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
     container_name: grafana.elasticsearch
     hostname: grafana.elasticsearch
+    dns:
+      - 192.168.2.100
     restart: unless-stopped
     ports:
       - 9200:9200
@@ -74,7 +82,9 @@ services:
     image: prom/prometheus
     container_name: grafana.prometheus
     hostname: grafana.prometheus
-    restart: always
+    dns:
+      - 192.168.2.100
+    restart: unless-stopped
     volumes:
       - ./prometheus:/etc/prometheus/
     command:
@@ -105,7 +115,7 @@ services:
       - 9100:9100
     networks:
       - monitoring-stack
-    restart: always
+    restart: unless-stopped
     deploy:
       mode: global
 
@@ -113,7 +123,9 @@ services:
     container_name: grafana.alertmanager
     image: prom/alertmanager
     hostname: grafana.alertmanager
-    restart: always
+    dns:
+      - 192.168.2.100
+    restart: unless-stopped
     ports:
       - 9093:9093
     volumes:
@@ -128,12 +140,14 @@ services:
     container_name: grafana.cadvisor
     image: gcr.io/cadvisor/cadvisor
     hostname: grafana.cadvisor
+    dns:
+      - 192.168.2.100
+    restart: unless-stopped
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-    restart: always
     deploy:
       mode: global
     networks:
