--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,22 @@
 version: "3"
-# More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
+x-environment: &oncall-environment
+  DATABASE_TYPE: sqlite3
+  BROKER_TYPE: redis
+  BASE_URL: $DOMAIN
+  SECRET_KEY: $SECRET_KEY
+  FEATURE_PROMETHEUS_EXPORTER_ENABLED: ${FEATURE_PROMETHEUS_EXPORTER_ENABLED:-false}
+  PROMETHEUS_EXPORTER_SECRET: ${PROMETHEUS_EXPORTER_SECRET:-}
+  REDIS_URI: ${CELERY_BROKER_URL}
+  DJANGO_SETTINGS_MODULE: settings.hobby
+  CELERY_WORKER_QUEUE: "default,critical,long,slack,telegram,webhook,retry,celery,grafana"
+  CELERY_WORKER_CONCURRENCY: "1"
+  CELERY_WORKER_MAX_TASKS_PER_CHILD: "100"
+  CELERY_WORKER_SHUTDOWN_INTERVAL: "65m"
+  CELERY_WORKER_BEAT_ENABLED: "True"
+  GRAFANA_API_URL: http://grafana:3000
+  CELERY_BROKER_URL: ${CELERY_BROKER_URL}
+  CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+  
 services:
   grafana:
     image: grafana/grafana:latest
@@ -7,13 +24,64 @@ services:
     hostname: grafana
     restart: always
     dns:
-      - 192.168.2.100
+      - 192.168.2.1
     user: "1000"
     volumes:
       - grafana-data:/var/lib/grafana
-      - /grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:rw
+      - /grafana/:/etc/grafana/provisioning/datasources:rw
+      - ./config/:/etc/grafana/
     networks:
       - web-secure
+      - redis
+      - monitoring-stack
+    ports:
+      - 3000:3000
+
+  engine:
+    image: grafana/oncall
+    container_name: grafana.engine
+    hostname: grafana.engine
+    restart: always
+    ports:
+      - "8282:8080"
+    command: sh -c "uwsgi --ini uwsgi.ini"
+    environment: *oncall-environment
+    volumes:
+      - oncall_data:/var/lib/oncall
+    depends_on:
+      oncall_db_migration:
+        condition: service_completed_successfully
+    networks:
+      - web-secure
+      - redis
+      - monitoring-stack
+
+  celery:
+    image: grafana/oncall
+    restart: always
+    container_name: grafana.celery
+    hostname: grafana.celery
+    command: sh -c "./celery_with_exporter.sh"
+    environment: *oncall-environment
+    volumes:
+      - ./oncall_data:/var/lib/oncall
+    depends_on:
+      oncall_db_migration:
+        condition: service_completed_successfully
+      # redis:
+      #   condition: service_healthy
+    networks:
+      - web-secure
+      - redis
+      - monitoring-stack
+
+  oncall_db_migration:
+    image: grafana/oncall
+    command: python manage.py migrate --noinput
+    environment: *oncall-environment
+    volumes:
+      - ./oncall_data:/var/lib/oncall
+    networks:
       - monitoring-stack
 
   loki:
@@ -21,7 +89,7 @@ services:
     container_name: grafana.loki
     hostname: grafana.loki
     dns:
-      - 192.168.2.100
+      - 192.168.2.1
     restart: unless-stopped
     ports:
       - 3100:3100
@@ -39,7 +107,7 @@ services:
     hostname: grafana.promtail
     restart: unless-stopped
     dns:
-      - 192.168.2.100
+      - 192.168.2.1
     volumes:
       - ./config/:/etc/promtail/
       - ${TRAEFIK_VOLUME}:/logs/
@@ -49,41 +117,12 @@ services:
     depends_on:
       - loki
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.4.1
-    container_name: grafana.elasticsearch
-    hostname: grafana.elasticsearch
-    dns:
-      - 192.168.2.100
-    restart: unless-stopped
-    ports:
-      - 9200:9200
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - xpack.security.enrollment.enabled=true
-      - ES_JAVA_OPTS=-Xmx3000m
-    volumes:
-      - ./elasticsearch-data:/usr/share/elasticsearch/data
-    networks:
-      - web-secure
-      - monitoring-stack
-    labels:
-      - "traefik.enable=true"
-
-      # web interface
-      - "traefik.http.routers.elasticsearch-secure.rule=Host(`elasticsearch.apex-migrations.net`) && PathPrefix(`/config/v1/agents`)"
-      - "traefik.http.routers.elasticsearch-secure.tls.certresolver=production"
-      - "traefik.http.routers.elasticsearch-secure.tls=true"
-      - "traefik.http.routers.elasticsearch-secure.entrypoints=web-secure"
-      - "traefik.http.services.elasticsearch-secure.loadbalancer.server.port=9200" #port to the webservice
-
   prometheus:
     image: prom/prometheus
     container_name: grafana.prometheus
     hostname: grafana.prometheus
     dns:
-      - 192.168.2.100
+      - 192.168.2.1
     restart: unless-stopped
     volumes:
       - ./prometheus:/etc/prometheus/
@@ -124,7 +163,7 @@ services:
     image: prom/alertmanager
     hostname: grafana.alertmanager
     dns:
-      - 192.168.2.100
+      - 192.168.2.1
     restart: unless-stopped
     ports:
       - 9093:9093
@@ -132,33 +171,63 @@ services:
       - ./alertmanager/:/etc/alertmanager/
     networks:
       - monitoring-stack
+      - web-secure
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
 
-  cadvisor:
-    container_name: grafana.cadvisor
-    image: gcr.io/cadvisor/cadvisor
-    hostname: grafana.cadvisor
-    dns:
-      - 192.168.2.100
-    restart: unless-stopped
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-    deploy:
-      mode: global
-    networks:
-      - monitoring-stack
+  # redis:
+  #   image: redis:7.0.5
+  #   restart: always
+  #   container_name: grafana.redis
+  #   command: "redis-server --requirepass '' "
+  #   ports:
+  #     - 6380:6379
+  #   volumes:
+  #     - ./redis_data:/data
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 500m
+  #         cpus: "0.5"
+  #   healthcheck:
+  #     test: ["CMD", "redis-cli", "ping"]
+  #     timeout: 5s
+  #     interval: 5s
+  #     retries: 10
+  #   networks:
+  #     - monitoring-stack
+  #     - web-secure
+
+  # cadvisor:
+  #   container_name: grafana.cadvisor
+  #   image: gcr.io/cadvisor/cadvisor
+  #   hostname: grafana.cadvisor
+  #   dns:
+  #     - 192.168.2.100
+  #   restart: unless-stopped
+  #   volumes:
+  #     - /:/rootfs:ro
+  #     - /var/run:/var/run:rw
+  #     - /sys:/sys:ro
+  #     - /var/lib/docker/:/var/lib/docker:ro
+  #   deploy:
+  #     mode: global
+  #   networks:
+  #     - monitoring-stack
 
 networks:
   web-secure:
     external: true
   monitoring-stack:
     external: true
+  redis:
+    external: true
 
 volumes:
   grafana-data:
     external: true
+  oncall_data:
+    external: false
+  redis_data:
+    external: false
