--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,4 @@
 version: "3"
-x-environment: &oncall-environment
-  DATABASE_TYPE: sqlite3
-  BROKER_TYPE: redis
-  BASE_URL: $DOMAIN
-  SECRET_KEY: $SECRET_KEY
-  FEATURE_PROMETHEUS_EXPORTER_ENABLED: ${FEATURE_PROMETHEUS_EXPORTER_ENABLED:-false}
-  PROMETHEUS_EXPORTER_SECRET: ${PROMETHEUS_EXPORTER_SECRET:-}
-  REDIS_URI: ${CELERY_BROKER_URL}
-  DJANGO_SETTINGS_MODULE: settings.hobby
-  CELERY_WORKER_QUEUE: "default,critical,long,slack,telegram,webhook,retry,celery,grafana"
-  CELERY_WORKER_CONCURRENCY: "1"
-  CELERY_WORKER_MAX_TASKS_PER_CHILD: "100"
-  CELERY_WORKER_SHUTDOWN_INTERVAL: "65m"
-  CELERY_WORKER_BEAT_ENABLED: "True"
-  GRAFANA_API_URL: http://grafana:3000
-  CELERY_BROKER_URL: ${CELERY_BROKER_URL}
-  CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
-  
 services:
   grafana:
     image: grafana/grafana:latest
@@ -24,7 +6,7 @@ services:
     hostname: grafana
     restart: always
     dns:
-      - 192.168.2.1
+      - 192.168.2.100
     user: "1000"
     volumes:
       - grafana-data:/var/lib/grafana
@@ -37,59 +19,12 @@ services:
     ports:
       - 3000:3000
 
-  engine:
-    image: grafana/oncall:latest
-    container_name: grafana.engine
-    hostname: grafana.engine
-    restart: always
-    ports:
-      - "8282:8080"
-    command: sh -c "uwsgi --ini uwsgi.ini"
-    environment: *oncall-environment
-    volumes:
-      - oncall_data:/var/lib/oncall
-    depends_on:
-      oncall_db_migration:
-        condition: service_completed_successfully
-    networks:
-      - web-secure
-      - redis
-      - monitoring-stack
-
-  celery:
-    image: grafana/oncall:latest
-    restart: always
-    container_name: grafana.celery
-    hostname: grafana.celery
-    command: sh -c "./celery_with_exporter.sh"
-    environment: *oncall-environment
-    volumes:
-      - ./oncall_data:/var/lib/oncall
-    depends_on:
-      oncall_db_migration:
-        condition: service_completed_successfully
-      # redis:
-      #   condition: service_healthy
-    networks:
-      - web-secure
-      - redis
-      - monitoring-stack
-
-  oncall_db_migration:
-    image: grafana/oncall:latest
-    command: python manage.py migrate --noinput
-    environment: *oncall-environment
-    volumes:
-      - ./oncall_data:/var/lib/oncall
-    networks:
-      - monitoring-stack
-
   loki:
     image: grafana/loki:2.7.3
     container_name: grafana.loki
     hostname: grafana.loki
     dns:
-      - 192.168.2.1
+      - 192.168.2.100
     restart: unless-stopped
     ports:
       - 3100:3100
@@ -97,6 +32,7 @@ services:
       - ./config/:/etc/loki/
     command: -config.file=/etc/loki/loki-config.yml
     networks:
+      - web-secure
       - monitoring-stack
     depends_on:
       - grafana
@@ -107,10 +43,13 @@ services:
     hostname: grafana.promtail
     restart: unless-stopped
     dns:
-      - 192.168.2.1
+      - 192.168.2.100
+    ports:
+      - 9080:9080
     volumes:
       - ./config/:/etc/promtail/
       - ${TRAEFIK_VOLUME}:/logs/
+      - ${NEXTCLOUD_VOLUME}:/logs/
     command: -config.file=/etc/promtail/promtail-config.yml
     networks:
       - monitoring-stack
@@ -122,7 +61,7 @@ services:
     container_name: grafana.prometheus
     hostname: grafana.prometheus
     dns:
-      - 192.168.2.1
+      - 192.168.2.100
     restart: unless-stopped
     volumes:
       - ./prometheus:/etc/prometheus/
@@ -163,7 +102,7 @@ services:
     image: prom/alertmanager
     hostname: grafana.alertmanager
     dns:
-      - 192.168.2.1
+      - 192.168.2.100
     restart: unless-stopped
     ports:
       - 9093:9093
