--- a/config/loki-config.yml
+++ b/config/loki-config.yml
@@ -47,6 +47,8 @@ compactor:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  enforce_metric_name: false
+  ingestion_rate_mb: 16
 
 chunk_store_config:
   max_look_back_period: 0s
