--- a/config/promtail-config.yml
+++ b/config/promtail-config.yml
@@ -9,7 +9,7 @@ clients:
   - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: traefik_log
+- job_name: traefik_logging
   static_configs:
   
   - targets:
