--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -43,11 +43,16 @@ scrape_configs:
   ##################
   #  Node-Exporter #
   ##################
-  # Collects metrics about Pr`ometheus
-  - job_name: 'grafana.node-exporter'
+  # Collects metrics about Prometheus
+  - job_name: 'grafana.server17a'
     scrape_interval: 5s
     static_configs:
       - targets: ['grafana.node-exporter:9100']
+      
+  - job_name: 'grafana.home-assistant'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.2.114:9100']
  
   ############
   # Cadvisor #
