--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - monitoring-stack
     depends_on:
       - grafana
+    restart: always
 
   telegraf:
     container_name: grafana.telegraf
@@ -49,6 +50,7 @@ services:
     networks:
       - web-secure
       - monitoring-stack
+    restart: always
 
   loki:
     image: grafana/loki:2.7.3
