--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -54,6 +54,11 @@ scrape_configs:
     static_configs:
       - targets: ['192.168.2.114:9100']
  
+  - job_name: 'Prometheus.pve'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.2.120:9100']
+
   ############
   # Cadvisor #
   ############
