--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -35,7 +35,7 @@ scrape_configs:
   # Traefik #
   ###########
   # Collects Traefik Metrics configured in the static traefik configuration
-  - job_name: 'traefik metrics'
+  - job_name: 'traefik'
     scrape_interval: 5s
     static_configs:
       - targets: ['traefik.rproxy:8082']
@@ -44,18 +44,30 @@ scrape_configs:
   #  Node-Exporter #
   ##################
   # Collects metrics about Prometheus
-  - job_name: 'grafana.server17a'
+  - job_name: 'server17a'
     scrape_interval: 5s
     static_configs:
       - targets: ['grafana.node-exporter:9100']
 
-  - job_name: 'infrastructure'
+  - job_name: 'home-assistant'
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.2.114:9100']
+      - targets: ['100.64.0.4:9100']
+
+  - job_name: 'pve'
+    scrape_interval: 5s
+    static_configs:
       - targets: ['192.168.2.120:9100']
+
+  - job_name: 'vps'
+    scrape_interval: 5s
+    static_configs:
       - targets: ['100.64.0.5:9100']
-      - targets: ['192.168.2.124:9200']
+
+  - job_name: 'nextcloud'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.2.131:9200']
 
   ############
   # Cadvisor #
