--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -64,10 +64,10 @@ scrape_configs:
     static_configs:
       - targets: ['192.168.2.120:9100']
 
-  # - job_name: 'vps'
-  #   scrape_interval: 5s
-  #   static_configs:
-  #     - targets: ['100.64.0.5:9100']
+  - job_name: 'pihole'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.2.101:9100']
 
   - job_name: 'vm-01'
     scrape_interval: 5s
