added smtp config to grafana

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -3,3 +3,12 @@ reporting_enabled = false
 check_for_updates = false
 check_for_plugin_updates = false
 enabled = false
+
+[smtp]
+enabled = true
+host = smtp.transip.email:465
+user = info@apex-migrations.net
+password = Laliloe4life
+from_address = info@apex-migrations.net
+from_name = Grafana
+skip_verify = false
