--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
   influxdb:
     container_name: grafana.influxdb
     image: influxdb:latest
+    ports:
+      - 8086:8086
     volumes:
       - /influxdb-storage:/var/lib/influxdb
     environment:
